# knights-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile_  README.md  TODO.md  clean.sh  run_cmake.sh  run_cmake_gcc5.sh
assets/images/: tiles.png.json
cmake/: FindSFGUI.cmake  FindSFML.cmake
data/: knights_archer.json
src/: animation.cpp  animation.h  character.cpp  character.h  common.h  data_loader.cpp  data_loader.h  game.cpp  game.h  game_window.cpp  game_window.h  graph.cpp  graph.h  hud.cpp  hud.h  level.cpp  level.h  main.cpp  map.cpp  map.h  map_object.h  nation.cpp  nation.h  object.cpp  object.h  object_library.cpp  object_library.h  object_template.cpp  object_template.h  resource_mgr.cpp  resource_mgr.h  spritesheet.cpp  spritesheet.h  tile.cpp  tile.h  unit.cpp  unit.h  unit_library.cpp  unit_library.h  unit_template.cpp  (+2 more)
src/core/: animation.cpp  animation.h  game_window.cpp  game_window.h  resource_mgr.cpp  resource_mgr.h  spritesheet.cpp  spritesheet.h
src/data/: nation.cpp  nation.h
src/game/: character.cpp  character.h
src/gui/: button.cpp  button.h  container.cpp  container.h
src/map/: level.cpp  level.h  map.cpp  map.h  tile.cpp
tests/: Makefile  test_gps.cpp  test_util.cpp
